# Cinder

./: Cargo.toml  LICENSE  README.md
examples/: triangle.rs
examples/triangle/: Cargo.toml  error.txt
examples/triangle/src/: main.rs
src/: functions.rs  helper.rs  lib.rs  match_error_codes.rs  result.rs  structure_type.rs  triangle.rs  unsafe_functions.rs
src/vk_instancing/: mod.rs
src/vk_instancing/vk_application_info/: builder.rs  conversion.rs  final.rs  mod.rs  raw.rs  safe.rs  unsafe.rs
src/vk_instancing/vk_create_info/: builder.rs  conversion.rs  final.rs  mod.rs  safe.rs  unsafe.rs
src/vk_instancing/vk_instance/: conversion.rs  final.rs  mod.rs  safe.rs  unsafe.rs
src/vulkan/: instance.rs  instance_create_info.rs  mod.rs  physical_device.rs
src/vulkan/safe/: functions.rs  logical_device.rs  mod.rs  physical_device.rs  window_surface.rs
src/vulkan/safe/device_items/: device_create_info.rs  device_queue_create_info.rs  logical_device.rs  mod.rs  physical_device.rs  physical_device_features.rs  queue_family.rs
src/vulkan/safe/instance_items/: application_info.rs  instance.rs  instance_create_info.rs  mod.rs
src/vulkan/safe/window_items/: surface_create_info.rs
src/vulkan/safe_wrapper/: application_info.rs  functions.rs  instance.rs  instance_create_info.rs  physical_device.rs
src/vulkan/unsafe/: mod.rs  unsafe_functions.rs
src/vulkan_instance/: application_info.rs  create_info.rs  mod.rs
tests/: logging.rs  no_window.rs  tests.rs
