[package]
name = "cinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

builder = []

default = ["builder"]

[dev-dependencies]
sdl2 = "0.35.2"

[dependencies]
mira = "0.1.13"
const-cstr = "0.3.0"
paste = "1.0.6"
sdl2 = "0.35.2"
