[package]
name = "cinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

builder = []
minimal-logging = []
medium-logging = []
heavy-logging = []
no-logging = []

default = ["builder", "tracing", "heavy-logging"]

[dev-dependencies]
sdl2 = "0.35.2"
tokio = { version = "1.19.2", features = ["rt", "macros"] }
tracing = "0.1.35"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}

[dependencies]
mira = "0.1.13"
const-cstr = "0.3.0"
paste = "1.0.6"
sdl2 = "0.35.2"

tracing = { version = "0.1.35", optional = true }
